Alterações layout (sobre)

--- a/sitetm/static/demos/seo/seo.css
+++ b/sitetm/static/demos/seo/seo.css
@@ -456,3 +456,9 @@ input.switch-toggle-round + label::after { border-radius: 4px }
 	background-size: cover;
 	background-position: 50% 50%;
 }
+
+
+
+.fbox-plain.fbox-sm {
+	margin-bottom: 40px;
+}
