--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -98,7 +98,7 @@
 
 						<div class="col-12 col-lg-auto text-center text-lg-end">
 							<div class="copyrights-menu copyright-links clearfix">
-								<a href="{% url 'index' %}">Home</a>/<a href="{% url 'sobre' %}">Sobre nós</a>/<a href="#">Serviços</a>/<a href="{% url 'faqs' %}">FAQs</a>/<a href="{% url 'contato' %}">Contato</a>
+								<a href="{% url 'index' %}">Home</a>/<a href="{% url 'sobre' %}">Quem Somos</a>/<a href="#">Soluções</a>/<a href="{% url 'contato' %}">Contato</a>
 							</div>
 						</div>
 					</div>
