--- a/templates/partials/testemunhos.html
+++ b/templates/partials/testemunhos.html
@@ -8,79 +8,49 @@
             <h3 class="nott ls0">O que nossos clientes dizem</h3>
         </div>
 
-        <div id="oc-testi" class="owl-carousel testimonials-carousel carousel-widget clearfix" data-margin="0" data-pagi="true" data-loop="true" data-center="true" data-autoplay="5000" data-items-sm="1" data-items-md="2" data-items-xl="3">
-
-            <div class="oc-item">
-                <div class="testimonial">
-                    <div class="testi-image">
-                        <a href="#"><img src="{% static 'demos/pet/images/testimonials/1.jpg' %}" alt="Customer Testimonails"></a>
-                    </div>
-                    <div class="testi-content">
-                        <p>Incidunt deleniti blanditiis quas aperiam recusandae consequatur ullam quibusdam cum libero illo rerum repellendus!</p>
-                        <div class="testi-meta">
-                            John Doe
-                            <span>XYZ Inc.</span>
+        
+        <div class="fslider testimonial testimonial-full bottommargin" data-animation="fade" data-arrows="false">
+            <div class="flexslider">
+                <div class="slider-wrap">
+                    <div class="slide">
+                        <div class="testi-image">
+                            <a href="#"><img src="{% static 'demos/pet/images/testimonials/1.jpg' %}" alt="Customer Testimonails"></a>
+                        </div>
+                        <div class="testi-content">
+                            <p>Similique fugit repellendus expedita excepturi iure perferendis provident quia eaque. Repellendus, vero numquam?</p>
+                            <div class="testi-meta">
+                                Steve Jobs
+                                <span>Apple Inc.</span>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </div>
-
-            <div class="oc-item">
-                <div class="testimonial">
-                    <div class="testi-image">
-                        <a href="#"><img src="{% static 'demos/pet/images/testimonials/2.jpg' %}" alt="Customer Testimonails"></a>
-                    </div>
-                    <div class="testi-content">
-                        <p>Natus voluptatum enim quod necessitatibus quis expedita harum provident eos obcaecati id culpa corporis molestias.</p>
-                        <div class="testi-meta">
-                            Collis Ta'eed
-                            <span>Envato Inc.</span>
+                    <div class="slide">
+                        <div class="testi-image">
+                            <a href="#"><img src="{% static 'demos/pet/images/testimonials/2.jpg' %}" alt="Customer Testimonails"></a>
+                        </div>
+                        <div class="testi-content">
+                            <p>Natus voluptatum enim quod necessitatibus quis expedita harum provident eos obcaecati id culpa corporis molestias.</p>
+                            <div class="testi-meta">
+                                Collis Ta'eed
+                                <span>Envato Inc.</span>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </div>
-            <div class="oc-item">
-                <div class="testimonial">
-                    <div class="testi-image">
-                        <a href="#"><img src="{% static 'demos/pet/images/testimonials/3.jpg' %}" alt="Customer Testimonails"></a>
-                    </div>
-                    <div class="testi-content">
-                        <p>Natus voluptatum enim quod necessitatibus quis expedita harum provident eos obcaecati id culpa corporis molestias.</p>
-                        <div class="testi-meta">
-                            Collis Ta'eed
-                            <span>Envato Inc.</span>
+                    <div class="slide">
+                        <div class="testi-image">
+                            <a href="#"><img src="{% static 'demos/pet/images/testimonials/3.jpg' %}" alt="Customer Testimonails"></a>
                         </div>
-                    </div>
-                </div>
-            </div>
-            <div class="oc-item">
-                <div class="testimonial">
-                    <div class="testi-image">
-                        <a href="#"><img src="{% static 'demos/pet/images/testimonials/4.jpg' %}" alt="Customer Testimonails"></a>
-                    </div>
-                    <div class="testi-content">
-                        <p>Natus voluptatum enim quod necessitatibus quis expedita harum provident eos obcaecati id culpa corporis molestias.</p>
-                        <div class="testi-meta">
-                            Mary Jane
-                            <span>Google Inc.</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="oc-item">
-                <div class="testimonial">
-                    <div class="testi-image">
-                        <a href="#"><img src="{% static 'images/testimonials/5.jpg' %}" alt="Customer Testimonails"></a>
-                    </div>
-                    <div class="testi-content">
-                        <p>Natus voluptatum enim quod necessitatibus quis expedita harum provident eos obcaecati id culpa corporis molestias.</p>
-                        <div class="testi-meta">
-                            Steve Jobs
-                        <span>Apple Inc.</span>
+                        <div class="testi-content">
+                            <p>Incidunt deleniti blanditiis quas aperiam recusandae consequatur ullam quibusdam cum libero illo rerum!</p>
+                            <div class="testi-meta">
+                                John Doe
+                                <span>XYZ Inc.</span>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+
     </div>
 </div>
