--- a/templates/sobre copy.html
+++ b/templates/sobre copy.html
@@ -11,7 +11,6 @@
 		============================================= -->
 
 		<section id="page-title" class="page-title-parallax page-title-center page-title-dark include-header" style="background-image: linear-gradient(to top, rgba(254,150,3,0.5), #39384D), url('{% static 'demos/seo/images/about-title.jpg' %}'); background-size: cover; padding: 120px 0;" data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
-			<div id="particles-line"></div>
 
 			<div class="container clearfix mt-4">
 				<div class="badge rounded-pill border border-light text-light">Sobre nós</div>
@@ -33,160 +32,100 @@
 				<div class="card mx-auto mw-md border-0 shadow rounded-4 card-seo-about mb-5 mb-lg-0">
 					<div class="card-body p-5">
 						<div class="row align-items-center">
-							<div class="center">
+							<div class="col-md-6">
 								<div class="heading-block border-bottom-0 mb-0">
-									<div class="badge rounded-pill badge-default">Quem somos</div>
-									<h3 class="nott ls0 mb-3">Prazer, somos a Simpli Global</h3>
+									<div class="badge rounded-pill badge-default">Crescimento</div>
+									<h3 class="nott ls0 mb-3">See how our Business Grows Month by Month</h3>
+									<p>Temos como objetivo prestar consultoria estratégica de Marketing para empresas de turismo e intercâmbio, com foco em aumentar leads qualificados e, desta maneira, auxiliar no crescimento destas agências.</p>
+									<a href="#" class="button button-rounded text-capitalize m-0 ls0">Get Started</a>
 								</div>
 							</div>
 							<div class="col-md-6">
-								<div class="heading-block border-bottom-0 mb-0">
-									<p>Uma empresa que tem como objetivo, desde o dia 0 de sua concepção, trazer resultados tangíveis para nossos clientes do setor de Turismo e Intercâmbio por meio de estratégias e soluções de marketing digital.</p>
-								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="heading-block border-bottom-0 mb-0">
-									<p>Percebendo que no mercado do marketing digital há um déficit muito grande de profissionais qualificados e agências que prestam um serviço sério e profissional, decidimos unir habilidades e fundar a Simpli Global.</p>
-								</div>
+								<p class="text-end text-muted text-smaller">Overall Progress: <span class="text-success fw-bold text-larger">+75%</span></p>
+								<canvas id="chart-0"></canvas>
 							</div>
 						</div>
 					</div>
 				</div>
 
-				<div class="section m-0" style="background: url('{% static 'demos/seo/images/sections/5.jpg' %}') no-repeat center center; background-size: cover;padding: 80px 0;">
-					<div class="mx-auto center px-5" style="max-width: 900px;">
-						<h2 class="mb-0 fw-light ls1">Nossa maior meta é ver nossos clientes realizados com os resultados obtidos por meio de nossos serviços.</h2>
-					</div>
-				</div>
-				
 				<!-- Features
 				============================================= -->
-				<div class="section bg-transparent m-0 pt-5 pb-2">
-					<div class="container clearfix px-5">
-
-						<div class="row">
-							<div class="col-lg-6">
-								<p>Entendemos a importância de se ter uma comunicação clara e transparente, e prezamos muito por isso com a seleção de nossos clientes também. Gostamos de trabalhar com clientes que tenham objetivos claros de crescimento.</p>
-							</div>
-	
-							<div class="col-lg-6">
-								<p class="mb-3">Selecionamos muito bem as empresas com quem vamos prestar serviço.</p>
-								<p>Acreditamos muito no potencial de crescimento que existe em um trabalho bem feito. Esse é o nosso combustível.</p>
-							</div>
-						</div>
-	
-
-					</div>
-				</div>
-
-				<!-- Features
-				============================================= -->
-				<div class="section bg-transparent m-0 pt-3 pb-5">
-					<div class="container clearfix px-5">
-
-						<div class="row">
-
-							<div class="col-lg-6 col-md-6 bottommargin clearfix">
-								<div class="fancy-title title-border">
-									<h4>Especialidadess</h4>
-								</div>
-								<ul class="skills">
-									<li data-percent="80">
-										<span>Análise</span>
-										<div class="progress">
-											<div class="progress-percent"><div class="counter counter-inherit counter-instant"><span data-from="0" data-to="80" data-refresh-interval="30" data-speed="1000"></span>%</div></div>
-										</div>
-									</li>
-									<li data-percent="60">
-										<span>Gestão</span>
-										<div class="progress">
-											<div class="progress-percent"><div class="counter counter-inherit counter-instant"><span data-from="0" data-to="60" data-refresh-interval="30" data-speed="1000"></span>%</div></div>
-										</div>
-									</li>
-									<li data-percent="90">
-										<span>Criativos</span>
-										<div class="progress">
-											<div class="progress-percent"><div class="counter counter-inherit counter-instant"><span data-from="0" data-to="90" data-refresh-interval="30" data-speed="1000"></span>%</div></div>
-										</div>
-									</li>
-									<li data-percent="70">
-										<span>Desenvolvimento</span>
-										<div class="progress">
-											<div class="progress-percent"><div class="counter counter-inherit counter-instant"><span data-from="0" data-to="70" data-refresh-interval="30" data-speed="1000"></span>%</div></div>
-										</div>
-									</li>
-								</ul>
-							</div>
-	
-							<div class="col-lg-6 col-md-6 bottommargin clearfix">
-								<div class="fancy-title title-border">
-									<h4>Instagram</h4>
-								</div>
-								<div id="instagram-photos" class="instagram-photos masonry-thumbs grid-container grid-4 customjs" data-user="blog.canvastemplate"></div>
-							</div>
-							
-						</div>
-	
-
-					</div>
-				</div>
-
-
-				<!-- Features
-				============================================= -->
-				<div class="section bg-transparent m-0 pt-5 pb-0">
+				<div class="section bg-transparent m-0 pt-3 pb-0">
 					<div class="container mw-md">
 
 						<div class="heading-block border-bottom-0 center mx-auto" style="max-width: 550px">
 							<div class="badge rounded-pill badge-default">Serviços</div>
 							<h3 class="nott ls0 mb-3">O Que Fazemos</h3>
+							<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed velit quo, quis. Culpa reprehenderit quo nostrum facere quis maiores.</p>
 						</div>
 
-
-					</div>
-					<div class="container clearfix px-5">
-
-						<div class="row col-mb-50 mb-0">
-	
-							<div class="col-lg-4">
-	
-								<div class="heading-block fancy-title border-bottom-0 title-bottom-border">
-									<h4>Nosso <span>Objetivo</span>.</h4>
-								</div>
-	
-								<p class="mb-2">Prestar consultoria estratégica de Marketing para empresas de turismo e intercâmbio, com foco em aumentar leads qualificados e, desta maneira, auxiliar no crescimento destas agências.</p>
-								<p>Prestamos serviços tradicionais de marketing, mas entendemos que apenas isto não é suficiente para trazer resultados para nossos clientes.</p>
-							</div>
-	
-							<div class="col-lg-4">
-	
-								<div class="heading-block fancy-title border-bottom-0 title-bottom-border">
-									<h4>Nossa <span>Visão</span>.</h4>
-								</div>
-	
-								<p class="mb-2">Tendo em vista este déficit no mercado, decidimos nos especializar no setor de agências de turismo e agências de intercâmbio.</p>
-								<p>Com o entendimento de diversas áreas dentro do marketing digital, notamos que não basta apenas estar em uma plataforma ou rede social, mas sim se utilizar do potencial que todas estas ferramentas combinadas podem trazer de benefícios para nossos clientes.</p>
-	
-							</div>
-	
-							<div class="col-lg-4">
-	
-								<div class="heading-block fancy-title border-bottom-0 title-bottom-border">
-									<h4>Como <span>Fazemos</span>.</h4>
-								</div>
-	
-								<p class="mb-2">Nós oferecemos um acompanhamento estratégico junto aos nossos clientes, para encontrar as melhores soluções para cada caso específico.</p>
-								<p>Não utilizamos métodos prontos, pois entendemos que cada agência tem suas demandas particulares. Elaboramos planos de ação específicos e direcionados especialmente para cada caso.</p>
-							</div>
-	
+						<div class="text-md-center">
+							<h3 class="bg-color d-inline-block px-4 py-2 text-white mb-0 rounded-1">Roadmap</h3>
 						</div>
-	
+						<div class="story-timeline">
+
+							<div class="clear mt-4"></div>
+							<div class="story-timeline-line"></div>
+							<div class="row justify-content-md-center">
+								<div class="col-md-5 text-md-end">
+									<h4 class="bg-secondary d-inline-block px-3 py-1 text-white mb-0 rounded-1 mb-3">Feb, 2019</h4>
+								</div>
+								<div class="story-timeline-dots"></div>
+								<div class="col-md-5">
+									<h3 class="mb-3">We Started</h3>
+									Lorem ipsum, dolor sit amet consectetur, adipisicing elit. Corrupti quisquam molestiae consequuntur tempora recusandae impedit dolorum ex ipsum blanditiis similique?
+								</div>
+							</div>
+
+							<div class="clear my-5"></div>
+
+							<div class="row justify-content-md-center">
+								<div class="col-md-5 order-md-2">
+									<h4 class="bg-secondary d-inline-block px-3 py-1 text-white mb-0 rounded-1 mb-3">Oct, 2019</h4>
+								</div>
+								<div class="story-timeline-dots"></div>
+								<div class="col-md-5 text-md-end">
+									<h3 class="mb-3">Registration</h3>
+									Lorem ipsum, dolor sit amet consectetur, adipisicing elit. Corrupti quisquam molestiae consequuntur tempora recusandae impedit dolorum ex ipsum blanditiis similique?
+								</div>
+							</div>
+
+							<div class="clear my-5"></div>
+
+							<div class="row justify-content-md-center">
+								<div class="col-md-5 text-md-end">
+									<h4 class="bg-secondary d-inline-block px-3 py-1 text-white mb-0 rounded-1 mb-3">Mar, 2020</h4>
+								</div>
+								<div class="story-timeline-dots"></div>
+								<div class="col-md-5">
+									<h3 class="mb-3"><span class="counter counter-inherit text-dark"><span data-from="2" data-to="57" data-refresh-interval="10" data-speed="2000"></span>% Increase in Sales</span></h3>
+									Lorem ipsum, dolor sit amet consectetur, adipisicing elit. Corrupti quisquam molestiae consequuntur tempora recusandae impedit dolorum ex ipsum blanditiis similique?
+								</div>
+							</div>
+
+							<div class="clear my-5"></div>
+
+							<div class="row justify-content-md-center">
+								<div class="col-md-5 order-md-2">
+									<h4 class="bg-secondary d-inline-block px-3 py-1 text-white mb-0 rounded-1 mb-3">Nov, 2010</h4>
+								</div>
+								<div class="story-timeline-dots"></div>
+								<div class="col-md-5 text-md-end">
+									<h3 class="mb-3"><span class="counter counter-inherit text-dark"><span data-from="20" data-to="410" data-refresh-interval="10" data-speed="2000"></span>+ Employees</span></h3>
+									Lorem ipsum, dolor sit amet consectetur, adipisicing elit. Corrupti quisquam molestiae consequuntur tempora recusandae impedit dolorum ex ipsum blanditiis similique?
+								</div>
+							</div>
+
+							<div class="clear mt-5"></div>
+
+						</div>
+
 					</div>
 				</div>
 
 				<!-- Features
 				============================================= -->
-				<div class="section bg-transparent mt-0 pt-0">
+				<div class="section bg-transparent">
 					<div class="container">
 						<div class="row col-mb-30 align-content-stretch">
 
