--- a/templates/partials/menu.html
+++ b/templates/partials/menu.html
@@ -12,7 +12,7 @@
 						<div class="top-links">
 							<ul class="top-links-container">
 								<li class="top-links-item"><a href="{% url 'index' %}">Home</a></li>
-								<li class="top-links-item"><a href="{% url 'faqs' %}">FAQs</a></li>
+								<li class="top-links-item"><a href="{% url 'sobre' %}">Quem somos</a></li>
 								<li class="top-links-item"><a href="{% url 'contato' %}">Contato</a></li>
 								<li class="top-links-item"><a href="#"><img src="{% static 'demos/seo/images/flags/br.png' %}" alt="Lang">Port</a>
 									<ul class="top-links-sub-menu">
@@ -30,12 +30,13 @@
 						<!-- Top Social
 						============================================= -->
 						<ul id="top-social">
-							<li><a href="https://facebook.com/semicolonweb" class="si-facebook" target="_blank"><span class="ts-icon"><i class="icon-facebook"></i></span><span class="ts-text">Facebook</span></a></li>
-							<li><a href="https://twitter.com/__semicolon" class="si-twitter" target="_blank"><span class="ts-icon"><i class="icon-twitter"></i></span><span class="ts-text">Twitter</span></a></li>
-							<li><a href="https://youtube.com/semicolonweb" class="si-youtube" target="_blank"><span class="ts-icon"><i class="icon-youtube"></i></span><span class="ts-text">Youtube</span></a></li>
-							<li><a href="https://instagram.com/semicolonweb" class="si-instagram" target="_blank"><span class="ts-icon"><i class="icon-instagram2"></i></span><span class="ts-text">Instagram</span></a></li>
-							<li><a href="tel:+10.11.85412542" class="si-call"><span class="ts-icon"><i class="icon-call"></i></span><span class="ts-text">+10.11.85412542</span></a></li>
-							<li><a href="mailto:info@canvas.com" class="si-email3"><span class="ts-icon"><i class="icon-envelope-alt"></i></span><span class="ts-text">info@canvas.com</span></a></li>
+							<li><a href="#" class="si-facebook" target="_blank"><span class="ts-icon"><i class="icon-facebook"></i></span><span class="ts-text">Facebook</span></a></li>
+							<li><a href="#" class="si-linkedin" target="_blank"><span class="ts-icon"><i class="icon-linkedin"></i></span><span class="ts-text">LinkedIn</span></a></li>
+							<!--<li><a href="https://twitter.com/__semicolon" class="si-twitter" target="_blank"><span class="ts-icon"><i class="icon-twitter"></i></span><span class="ts-text">Twitter</span></a></li>-->
+							<!--<li><a href="https://youtube.com/semicolonweb" class="si-youtube" target="_blank"><span class="ts-icon"><i class="icon-youtube"></i></span><span class="ts-text">Youtube</span></a></li>-->
+							<li><a href="#" class="si-instagram" target="_blank"><span class="ts-icon"><i class="icon-instagram2"></i></span><span class="ts-text">Instagram</span></a></li>
+							<li><a href="tel:#" class="si-call"><span class="ts-icon"><i class="icon-call"></i></span><span class="ts-text">+10.11.85412542</span></a></li>
+							<li><a href="mailto:#" class="si-email3"><span class="ts-icon"><i class="icon-envelope-alt"></i></span><span class="ts-text">info@canvas.com</span></a></li>
 						</ul><!-- #top-social end -->
 
 					</div>
@@ -80,8 +81,8 @@
 
 							<ul class="menu-container">
 								<li class="menu-item {% if request.resolver_match.url_name == 'index' %}current{% endif %}"><a class="menu-link" href="{% url 'index' %}"><div>Home</div></a></li>
-								<li class="menu-item {% if request.resolver_match.url_name == 'sobre' %}current{% endif %}"><a class="menu-link" href="{% url 'sobre' %}"><div>O que fazemos</div></a></li>
-								<li class="menu-item mega-menu {% if request.resolver_match.url_name == 'gestao_trafego' or request.resolver_match.url_name == 'analise_empresa' or request.resolver_match.url_name == 'criativos' or request.resolver_match.url_name == 'identidade_visual' or request.resolver_match.url_name == 'desenvolvimento_web' or request.resolver_match.url_name == 'posts' %}current{% endif %}"><div class="menu-link"><div>Serviços</div></div>
+								<li class="menu-item {% if request.resolver_match.url_name == 'sobre' %}current{% endif %}"><a class="menu-link" href="{% url 'sobre' %}"><div>Quem Somos</div></a></li>
+								<li class="menu-item mega-menu {% if request.resolver_match.url_name == 'gestao_trafego' or request.resolver_match.url_name == 'analise_empresa' or request.resolver_match.url_name == 'criativos' or request.resolver_match.url_name == 'identidade_visual' or request.resolver_match.url_name == 'desenvolvimento_web' or request.resolver_match.url_name == 'posts' %}current{% endif %}"><div class="menu-link"><div>Soluções</div></div>
 									<div class="mega-menu-content mega-menu-style-2 px-0">
 										<div class="container">
 											<div class="row">
@@ -158,7 +159,7 @@
 										</div>
 									</div>
 								</li>
-								<li class="menu-item {% if request.resolver_match.url_name == 'faqs'%}current{% endif %}"><a class="menu-link" href="{% url 'faqs' %}"><div>FAQs</div></a></li>
+								<!--<li class="menu-item {% if request.resolver_match.url_name == 'faqs'%}current{% endif %}"><a class="menu-link" href="{% url 'faqs' %}"><div>FAQs</div></a></li>-->
 								<li class="menu-item {% if request.resolver_match.url_name == 'contato'%}current{% endif %}"><a class="menu-link" href="{% url 'contato' %}"><div>Contato</div></a></li>
 							</ul>
 
