Pagina de construção + Mudanças digital ocean + dominio

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,17 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Site Principal | TM</title>
+	<title>Site Principal | Simpli Global</title>
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-L317C515J9"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'G-L317C515J9');
+	</script>
 
 </head>
 
