--- a/templates/partials/javascripts.html
+++ b/templates/partials/javascripts.html
@@ -91,3 +91,6 @@
         <script src="{% static 'js/particles/particles.min.js' %}"></script>
         <script src="{% static 'js/particles/particles-line.js' %}"></script><!-- Particles Line -->
     {% endif %}
+    <!-- For Countdown TIRARRRRRR -->
+    <script src="{% static 'js/components/moment.js' %}"></script>
+    <script src="{% static 'js/jquery.countdown-pt-BR.js' %}"></script>
