Finalizações do temlate

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,17 @@
 
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="author" content="Guilherme Nogueira Batistette" />
+	<meta name="description" content="{{descricao}}">
+	<link rel="canonical" href="{{endereco}}">
+	<meta name="robots" content="{{robots}}">
+	
+	<meta property="og:title" content="{{titulo}}" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="{{endereco}}" />
+	<meta property="og:description" content="{{descricao}}" />
+	<meta property="og:site_name" content="Simpli Global" />
+
+
 
 	<!-- Stylesheets
 	============================================= -->
@@ -21,6 +32,7 @@
 	<link rel="stylesheet" href="{% static 'css/components/bs-switches.css' %}" type="text/css" />
 
 	<link rel="stylesheet" href="{% static 'css/custom.css' %}" type="text/css" />
+
 	<meta name='viewport' content='initial-scale=1, viewport-fit=cover'>
 
 	<!-- Seo Demo Specific Stylesheet -->
@@ -31,22 +43,26 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Site Principal | Simpli Global</title>
+	<title>{{titulo}} | Simpli Global</title>
 
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-L317C515J9"></script>
-	<script>
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
-
-	gtag('config', 'G-L317C515J9');
-	</script>
+	<!-- Google Tag Manager -->
+	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-TT5GSRT');</script>
+	<!-- End Google Tag Manager -->
 
 </head>
 
 <body class="stretched">
+	<!-- Google Tag Manager (noscript) -->
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TT5GSRT"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
 
+	{% include 'partials/gdpr.html' %}
+	
     {% block content %} 
     {% endblock %}
 
