--- a/templates/contato.html
+++ b/templates/contato.html
@@ -29,64 +29,149 @@
 		<section id="content">
 
 			<div class="content-wrap pb-0">
-
-				<div class="container mb-3">
-					<div class="row justify-content-between">
-						<div class="col-lg-3 col-md-6">
-							<div class="feature-box flex-column text-center">
-								<div class="fbox-image text-center mb-3">
-									<img height="120" src="{% static 'demos/seo/images/icons/seo.svg' %}" alt="Feature Icon">
+				<div class="container mb-5">
+					<div class="w-100">
+						<div class="row col-mb-50">
+							<div class="col-sm-6 col-lg-3">
+								<div class="feature-box fbox-center fbox-bg fbox-plain">
+									<div class="fbox-icon">
+										<a href="#"><i class="icon-map-marker2"></i></a>
+									</div>
+									<div class="fbox-content">
+										<h3>Nosso Local<span class="subtitle">Ourinhos, São Paulo</span></h3>
+									</div>
 								</div>
-								<div class="fbox-content">
-									<h3 class="nott ls0 mb-4">Localização:</h3>
-									<p class="text-smaller mb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
-									<address>
-										<a href="https://maps.google.com">
-										<u>795 Folsom Ave, Suite 600<br>
-										San Francisco, CA 94107</u>
-										</a>
-									</address>
+							</div>
+
+							<div class="col-sm-6 col-lg-3">
+								<div class="feature-box fbox-center fbox-bg fbox-plain">
+									<div class="fbox-icon">
+										<a href="#"><i class="icon-phone3"></i></a>
+									</div>
+									<div class="fbox-content">
+										<h3>Fale conosco<span class="subtitle">(xx) xxxx xxxx</span></h3>
+									</div>
+								</div>
+							</div>
+
+							<div class="col-sm-6 col-lg-3">
+								<div class="feature-box fbox-center fbox-bg fbox-plain">
+									<div class="fbox-icon">
+										<a href="#"><i class="icon-skype2"></i></a>
+									</div>
+									<div class="fbox-content">
+										<h3>Faça uma chamada<span class="subtitle">@Nome</span></h3>
+									</div>
+								</div>
+							</div>
+
+							<div class="col-sm-6 col-lg-3">
+								<div class="feature-box fbox-center fbox-bg fbox-plain">
+									<div class="fbox-icon">
+										<a href="#"><i class="icon-instagram2"></i></a>
+									</div>
+									<div class="fbox-content">
+										<h3>Siga no Instagram<span class="subtitle">2.3M Followers</span></h3>
+									</div>
 								</div>
 							</div>
 						</div>
+					</div><!-- Contact Info End -->
+				</div>
 
-						<div class="col-lg-3 col-md-6">
-							<div class="feature-box flex-column text-center">
-								<div class="fbox-image text-center mb-3">
-									<img height="120" src="{% static 'demos/seo/images/icons/social.svg' %}" alt="Feature Icon">
-								</div>
-								<div class="fbox-content">
-									<h3 class="nott ls0 mb-4">Contato:</h3>
-									<p class="text-smaller mb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
-									<a class="btn btn-link" href="mailto:info@canvas.com"><u>noreply@canvas.com</u></a>
-									<a class="btn btn-link" href="tel:10-22-33445566"><u>(10) 22 33445566</u></a>
-								</div>
-							</div>
-						</div>
+				<div class="clear"></div>
 
-						<div class="col-lg-3 col-md-6">
-							<div class="feature-box flex-column text-center">
-								<div class="fbox-image text-center mb-3">
-									<img height="120" src="{% static 'demos/seo/images/icons/group.svg' %}" alt="Feature Icon">
-								</div>
-								<div class="fbox-content">
-									<h3 class="nott ls0 mb-4">Chat ao vivo:</h3>
-									<p class="text-smaller mb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
-									<a href="#"><u>Click Here</u></a>
-								</div>
+				<div class="container my-5">
+					<div class="row justify-content-center">
+						<div class="col-md-7">
+							<h2 class="display-4 text-dark fw-semibold ls--2 mb-3">Deixe sua mensagem</h2>
+							<p class="text-dark">Entraremos em contato assim que alguem estiver disponível.</p>
+
+							<div class="form-widget topmargin">
+
+								<div class="form-result"></div>
+
+								<form class="mb-0" id="template-contactform" name="template-contactform" action="" method="post">
+									{% csrf_token %}
+									<div class="form-process">
+										<div class="css3-spinner">
+											<div class="css3-spinner-scaler"></div>
+										</div>
+									</div>
+
+									<div class="position-absolute top-0 start-50 translate-middle" id="alerta">
+									</div>
+
+									<div class="row">
+										<div class="col-md-4 form-group">
+											<label for="form_nome">Nome<small class="text-danger">*</small></label>
+											<input type="text" id="form_nome" name="form_nome" value="" class="form-control required" />
+										</div>
+
+										<div class="col-md-4 form-group">
+											<label for="form_email">Email<small class="text-danger">*</small></label>
+											<input type="email" id="form_email" name="form_email" value="" class="required email form-control" />
+										</div>
+
+										<div class="col-md-4 form-group">
+											<label for="form_fone">Telefone<small class="text-danger">*</small></label>
+											<input type="text" id="form_fone" name="form_fone" value="" class="required form-control" onkeypress="mask(this, mphone);" onfocus="mask(this, mphone);" minlength="14" />
+										</div>
+
+										<div class="w-100"></div>
+
+										<div class="col-md-4 form-group">
+											<label for="form_empresa">Empresa</label>
+											<input type="text" id="form_empresa" name="form_empresa" value="" class="form-control" />
+										</div>
+
+										<div class="col-md-4 form-group">
+											<label for="form_estado">Estado<small class="text-danger">*</small></label>
+											<select id="form_estado" name="form_estado" class="required form-control">
+												<option value="" disabled="disabled" selected>-- Selecione --</option>
+												<option value="pr">Paraná</option>
+												<option value="sp">São Paulo</option>
+												<option value="rj">Rio de Janeiro</option>
+											</select>
+										</div>
+
+										<div class="col-md-4 form-group">
+											<label for="form_interesse">Interessado em<small class="text-danger">*</small></label>
+											<select id="form_interesse" name="form_interesse" class="required form-control">
+												<option value="" disabled="disabled" selected>-- Selecione --</option>
+												<option value="Análise estratégica">Análise estratégica</option>
+												<option value="Gestão de tráfego">Gestão de tráfego pago</option>
+												<option value="Identidade visual">Identidade visual</option>
+												<option value="Criativos">Criativos</option>
+												<option value="Desenvolvimento WEB">Desenvolvimento WEB</option>
+												<option value="Posts">Posts</option>
+											</select>
+										</div>
+
+										<div class="w-100"></div>
+
+										<div class="col-12 form-group">
+											<label for="form_mensagem">Mensagem<small class="text-danger">*</small></label>
+											<textarea class="required form-control" id="form_mensagem" name="form_mensagem" rows="6" cols="30"></textarea>
+										</div>
+
+										<div class="col-12 form-group d-none">
+											<input type="text" id="template-contactform-botcheck" name="template-contactform-botcheck" value="" class="form-control" />
+										</div>
+
+										<div class="col-12 form-group">
+											<button class="button button-rounded button-xlarge m-0 center fw-medium nott ls0 fw-normal" type="submit" id="template-contactform-submit" name="template-contactform-submit" value="submit" onclick="manda_msg()">Enviar Mensagem</button>
+										</div>
+									</div>
+
+									<input type="hidden" name="prefix" value="template-contactform-">
+
+								</form>
 							</div>
 						</div>
 					</div>
 				</div>
 
-				<div class="clear"></div>
-
-				<!-- Google Map
-				============================================= -->
-				<section class="gmap vh-60 topmargin-lg" data-address="Melbourne, Australia" data-markers='[{address: "Melbourne, Australia", html: $("#map-marker-1").html(), icon:{ image: "{% static "images/icons/map-icon-red.png" %}", iconsize: [32, 39], iconanchor: [32,39] } }]'></section>
-				<div id="map-marker-1" class="d-none"><div style="width: 300px;"><h4 class="mb-2">Hi! We are <span>Envato!</span></h4><p class="mb-0" style="font-size:1rem;">Our mission is to help people to <strong>earn</strong> and to <strong>learn</strong> online. We operate <strong>marketplaces</strong> where hundreds of thousands of people buy and sell digital goods every day.</p></div></div>
-
-                {% include 'partials/mini-contato.html' %}
 
 			</div>
 		</section><!-- #content end -->
@@ -94,5 +179,87 @@
         {% include 'partials/footer.html' %}
 
 	</div><!-- #wrapper end -->
+	<script type="text/javascript">
+		function mask(o, f) {
+			setTimeout(function () {
+				var v = mphone(o.value);
+				if (v != o.value) {
+					o.value = v;
+				}
+			}, 1);
+		}
+		
+		function mphone(v) {
+			var r = v.replace(/\D/g,"");
+			r = r.replace(/^0/,"");
+			if (r.length > 10) {
+				r = r.replace(/^(\d\d)(\d{5})(\d{4}).*/, "($1) $2-$3");
+			}
+			else if (r.length > 5) {
+				r = r.replace(/^(\d\d)(\d{4})(\d{0,4}).*/, "($1) $2-$3");
+			}
+			else if (r.length > 2) {
+				r = r.replace(/^(\d\d)(\d{0,5})/, "($1) $2");
+			}
+			else {
+				r = r.replace(/^(\d*)/, "($1");
+			}
+			return r;
+		}
+		
+		
+		function manda_msg() {
+			function validateEmail(email) {
+				var re = /\S+@\S+/;
+				return re.test(email);
+			}
+			var nome = document.getElementById("form_nome").value;
+			var email = document.getElementById("form_email").value;
+			var telefone = document.getElementById("form_fone").value;
+			var empresa = document.getElementById("form_empresa").value;
+			var estado = document.getElementById("form_estado").value;
+			var interesse = document.getElementById("form_interesse").value;
+			var mensagem = document.getElementById("form_mensagem").value;
+			if (nome == '') {
+				document.getElementById("form_nome").focus();
+			} else if (!validateEmail(email)) {
+				document.getElementById("form_email").focus();
+			} else if (telefone.length < 14) {
+				document.getElementById("form_fone").focus();
+			} else if (estado == '') {
+				document.getElementById("form_estado").focus();
+			} else if (interesse == '') {
+				document.getElementById("form_interesse").focus();
+			} else if (mensagem == '') {
+				document.getElementById("form_mensagem").focus();
+			} else {
+				$.post(
+					'/mensagem_contato/',{
+						reply: false,
+						csrfmiddlewaretoken: $('input[name="csrfmiddlewaretoken"]').val(),
+						nome: $('input[name="form_nome"]').val(),
+						email: $('input[name="form_email"]').val(),
+						empresa: $('input[name="form_empresa"]').val(),
+						telefone: $('input[name="form_fone"]').val(),
+						estado: estado,
+						interesse: interesse,
+						mensagem: mensagem
+					},
+					function (data) {
+						var divMae = document.getElementById('alerta')
+						var wrapper = document.createElement('div')
+						if (data == 'Mensagem enviada com sucesso!'){
+							document.getElementById("template-contactform").reset();
+							wrapper.innerHTML = '<div class="alert alert-success alert-dismissible" role="alert"><i class="icon-thumbs-up"></i> ' + data + '<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></div>'
+							divMae.append(wrapper)
+						} else {
+							wrapper.innerHTML = '<div class="alert alert-danger alert-dismissible" role="alert"><i class="icon-remove"></i> ' + data + '<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></div>'
+							divMae.append(wrapper)
+						}
+					}
+				);
+			}
+		}
+	</script>
 
 {% endblock %}
