--- a/templates/index.html
+++ b/templates/index.html
@@ -117,7 +117,7 @@
 				</div>
 
 				<!-- Pricing
-				============================================= -->
+				=============================================
 				<div class="section m-0" style="background: url('{% static 'demos/seo/images/sections/4.png' %}') no-repeat center top; background-size: cover; padding: 140px 0 0;">
 					<div class="container">
 						<div class="row justify-content-between">
@@ -210,11 +210,39 @@
 
 						</div>
 					</div>
+				</div> -->
+
+				<!-- Pricing
+				============================================= -->
+				<div class="section m-0" style="background: url('{% static 'demos/seo/images/sections/4.png' %}') no-repeat center top; background-size: cover; padding: 140px 0 0;">
+					<div class="container clearfix">
+
+						<div class="row">
+							<div class="col-lg-5 topmargin-sm">
+								<div class="heading-block border-bottom-0">
+									<h2>Sua empresa em boas mãos.</h2>
+									<span class="ls1">Five Points that define Our Reliability.</span>
+								</div>
+
+								<ul class="iconlist iconlist-large iconlist-color">
+									<li><i class="icon-ok"></i> Market Leader since 1915</li>
+									<li><i class="icon-ok"></i> Positive Results within Deadlines</li>
+									<li><i class="icon-ok"></i> 100% Reliability &amp; Guarantee</li>
+									<li><i class="icon-ok"></i> Dedicated Professional Team of 500+</li>
+									<li><i class="icon-ok"></i> Unmatched After Project Completion Support</li>
+								</ul>
+							</div>
+							<div class="col-lg-7">
+								<img src="{% static 'images/time.png' %}" alt="Bottom Trust">
+							</div>
+						</div>
+
+					</div>
 				</div>
 
                 {% include 'partials/mini-contato.html' %}
 				<!-- Works/Projects
-				============================================= -->
+				=============================================
 				<div class="section m-0" style="background: url('{% static 'demos/seo/images/sections/5.jpg' %}') no-repeat center center; background-size: cover;padding: 80px 0;">
 					<div class="container">
 						<div class="heading-block border-bottom-0 center">
@@ -339,7 +367,7 @@
 						</div>
 
 					</div>
-				</div>
+				</div> -->
 
 				<!-- Features
 				============================================= -->
@@ -385,8 +413,75 @@
 
                 {% include 'partials/testemunhos.html' %}
 
+				<div class="section bg-transparent py-4">
+					<div class="container">
+						<div class="row align-items-center justify-content-center gutter-50">
+							<div class="col-lg-5 px-5">
+								<div class="badge rounded-pill badge-default">Encontre ajuda</div>
+								<h3 class="nott ls0">Perguntas frequentes</h3>
+
+								<div class="toggle" data-state="open">
+									<div class="toggle-header justify-content-between">
+										<div class="toggle-icon">
+											<i class="toggle-closed icon-caret-down color"></i>
+											<i class="toggle-open icon-caret-up text-warning"></i>
+										</div>
+										<div class="toggle-title fw-bold">
+											How do I become an author?
+										</div>
+									</div>
+									<div class="toggle-content ps-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, dolorum, vero ipsum molestiae minima odio quo voluptate illum excepturi quam cum voluptates doloribus quae nisi tempore necessitatibus dolores.</div>
+								</div>
+
+								<div class="toggle">
+									<div class="toggle-header justify-content-between">
+										<div class="toggle-icon">
+											<i class="toggle-closed icon-caret-down color"></i>
+											<i class="toggle-open icon-caret-up text-warning"></i>
+										</div>
+										<div class="toggle-title fw-bold">
+											Helpful Resources for Authors
+										</div>
+									</div>
+									<div class="toggle-content ps-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, dolorum, vero ipsum molestiae minima odio quo voluptate illum excepturi quam cum voluptates doloribus quae nisi tempore necessitatibus dolores ducimus enim libero eaque explicabo suscipit animi at quaerat aliquid ex expedita perspiciatis? Saepe, aperiam, nam unde quas beatae vero vitae nulla.</div>
+								</div>
+
+								<div class="toggle">
+									<div class="toggle-header justify-content-between">
+										<div class="toggle-icon">
+											<i class="toggle-closed icon-caret-down color"></i>
+											<i class="toggle-open icon-caret-up text-warning"></i>
+										</div>
+										<div class="toggle-title fw-bold">
+											How much money can I make?
+										</div>
+									</div>
+									<div class="toggle-content ps-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, dolorum, vero ipsum molestiae minima odio quo voluptate illum excepturi quam cum voluptates doloribus quae nisi tempore necessitatibus dolores ducimus enim libero eaque explicabo suscipit animi at quaerat aliquid ex expedita perspiciatis? Saepe, aperiam, nam unde quas beatae vero vitae nulla.</div>
+								</div>
+
+								<div class="toggle">
+									<div class="toggle-header justify-content-between">
+										<div class="toggle-icon">
+											<i class="toggle-closed icon-caret-down color"></i>
+											<i class="toggle-open icon-caret-up text-warning"></i>
+										</div>
+										<div class="toggle-title fw-bold">
+											Can I offer my items for free on a promotional basis?
+										</div>
+									</div>
+									<div class="toggle-content ps-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, dolorum, vero ipsum molestiae minima odio quo voluptate illum excepturi quam cum voluptates doloribus quae nisi tempore necessitatibus dolores ducimus enim libero eaque explicabo suscipit animi at quaerat aliquid ex expedita perspiciatis? Saepe, aperiam, nam unde quas beatae vero vitae nulla.</div>
+								</div>
+							</div>
+
+							<div class="col-lg-5 col-10">
+								<img src="{% static 'images/perguntas.png' %}" alt="Image">
+							</div>
+						</div>
+					</div>
+				</div>
+
 				<!-- Blogs
-				============================================= -->
+				============================================= 
 				<div class="container py-4">
 					<div class="heading-block border-bottom-0 center">
 						<div class="badge rounded-pill badge-default">Últimas Publicações</div>
@@ -455,7 +550,7 @@
 						</div>
 					</div>
 
-				</div>
+				</div> -->
                 
                 {% include 'partials/promo-contato.html' %}
 			</div>
