--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -70,11 +70,11 @@
 										<a href="https://facebook.com/semicolonweb" target="_blank" class="text-dark"><small style="display: block; margin-top: 3px;"><strong>Curta</strong><br>no Facebook</small></a>
 									</div>
 									<div class="col-lg-6 col-md-12 col-6">
-										<a href="https://themeforest.net/user/SemiColonWeb/follow" target="_blank" class="social-icon si-dark si-colored si-rss mb-0" style="margin-right: 10px;">
-											<i class="icon-rss"></i>
-											<i class="icon-rss"></i>
+										<a href="https://www.linkedin.com/company/simpliglobal" target="_blank" class="social-icon si-dark si-colored si-linkedin mb-0" style="margin-right: 10px;">
+											<i class="icon-linkedin"></i>
+											<i class="icon-linkedin"></i>
 										</a>
-										<a href="https://themeforest.net/user/SemiColonWeb/follow" target="_blank" class="text-dark"><small style="display: block; margin-top: 3px;"><strong>Inscreva-se</strong><br>no RSS Feeds</small></a>
+										<a href="https://www.linkedin.com/company/simpliglobal" target="_blank" class="text-dark"><small style="display: block; margin-top: 3px;"><strong>Siga</strong><br>no Linkedin</small></a>
 									</div>
 								</div>
 
@@ -93,7 +93,7 @@
 					<div class="row justify-content-between col-mb-30">
 						<div class="col-12 col-lg-auto text-center text-lg-start">
 							Copyrights &copy; 2022 All Rights Reserved.<br>
-							<div class="copyright-links"><a href="#">Termos de Uso</a> / <a href="#">Política de Privacidade</a></div>
+							<div class="copyright-links"><a href="{% url 'termos_uso' %}">Termos de Uso</a> / <a href="{% url 'politica_privacidade' %}">Política de Privacidade</a></div>
 						</div>
 
 						<div class="col-12 col-lg-auto text-center text-lg-end">
@@ -108,29 +108,37 @@
 		</footer><!-- #footer end -->
 		<script type="text/javascript">
 			function manda_email() {
-				$.post(
-					'/email_newsletter/',{
-						reply: false,
-						csrfmiddlewaretoken: $('input[name="csrfmiddlewaretoken"]').val(),
-						email: $('input[name="email-newsletter"]').val()
-					},
-					function (data) {
-						var rodinha = document.getElementById("rodinha");
-						rodinha.classList.remove('icon-line-loader');
-						rodinha.classList.remove('icon-spin');
-						rodinha.classList.add('icon-email2');
-						var divMae = document.getElementById('alerta-footer')
-						var wrapper = document.createElement('div')
-						if (data == 'Cadastrado com sucesso!'){
-							document.getElementById("form-newsletter").reset();
-							wrapper.innerHTML = '<div class="alert alert-success alert-dismissible" role="alert">' + data + '<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></div>'
-							divMae.append(wrapper)
-						} else {
-							wrapper.innerHTML = '<div class="alert alert-danger alert-dismissible" role="alert">' + data + '<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></div>'
-							divMae.append(wrapper)
+				function validateEmail(email) {
+					var re = /\S+@\S+/;
+					return re.test(email);
+				}
+				var email = document.getElementById("email-newsletter").value;
+				if(validateEmail(email)) {
+					$.post(
+						'/email_newsletter/',{
+							reply: false,
+							csrfmiddlewaretoken: $('input[name="csrfmiddlewaretoken"]').val(),
+							email: $('input[name="email-newsletter"]').val()
+						},
+						function (data) {
+							var rodinha = document.getElementById("rodinha");
+							rodinha.classList.remove('icon-line-loader');
+							rodinha.classList.remove('icon-spin');
+							rodinha.classList.add('icon-email2');
+							var divMae = document.getElementById('alerta-footer')
+							var wrapper = document.createElement('div')
+							if (data == 'Cadastrado com sucesso!'){
+								document.getElementById("form-newsletter").reset();
+								wrapper.innerHTML = '<div class="alert alert-success alert-dismissible" role="alert">' + data + '<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></div>'
+								divMae.append(wrapper)
+							} else {
+								wrapper.innerHTML = '<div class="alert alert-danger alert-dismissible" role="alert">' + data + '<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></div>'
+								divMae.append(wrapper)
+							}
 						}
-					}
-				);
-
+					);
+				} else {
+					document.getElementById("email-newsletter").focus();
+				}
 			}
 		</script>
